<resources>
    <string name="app_name">ForFoodiesByFoodies</string>
    <string name="for_foodies_by_foodies">For Foodies By Foodies</string>
    <string name="welcome">Welcome To Foodies</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="type_your_email"> Type your email address</string>
    <string name="pass_hint">  ********</string>
    <string name="register">Register</string>
    <string name="forgot_pass">Forgot password?</string>
    <string name="login">Login</string>
    <string name="log_in_by">or log in using</string>

    <string name="email_hint">example@gmail.com</string>

    <string name="username">User Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="term_page">Terms and conditions</string>


    <string name="terms_of_service_and_privacy_policy">Terms of Service and Privacy Policy</string>
    <string name="i_accept_the">I accept the Terms of Service and Privacy Policy </string>
    <string name="terms_and_conditions">Terms and conditions</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>

    <string name="create_new">Click here for register</string>
    <string name="not_register">Not Register?</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>

    <string name="name_error_firstname">Please enter your first name</string>
    <string name="name_error_lastname">Please enter your last name</string>

    <string name="email_error">Please enter a email address</string>
    <string name="error_invalid_email">Email is not valid</string>
    <string name="password_error">Please enter a password</string>
    <string name="password_error_2">Please enter password again</string>
    <string name="error_invalid_password">Please enter a minimum password of 4 characters</string>

    <string name="hint_checkbox">Accept the terms and conditions</string>
    <string name="textview_term">This are the terms and conditions.This are the terms and conditions.This are the terms andThis are the terms and conditions.This are the terms and conditions.This are the terms andThis are the terms and conditions.This are the terms and conditions.This are the terms andThis are the terms and conditions.This are the terms and conditions.This are the terms andThis are the terms and conditions.This are the terms and conditions.This are the terms andThis are the terms and conditions.This are the terms and conditions.This are the terms andThis are the terms and conditions.This are the terms and conditions.This are the terms andThis are the terms and conditions.This are the terms and conditions.This are the terms andThis are the terms and conditions.This are the terms and conditions.This are the terms andThis are the terms and conditions.This are the terms and conditions.This are the terms andThis are the terms and conditions.This are the terms and conditions.This are the terms andThis are the terms and conditions.This are the terms and conditions.This are the terms andThis are the terms and conditions.This are the terms and conditions.This are the terms andThis are the terms and conditions.This are the terms and conditions.This are the terms andThis are the terms and conditions.This are the terms and conditions.This are the terms andThis are the terms and conditions.This are the terms and conditions.This are the terms andThis are the terms and conditions.This are the terms and conditions.This are the terms andThis are the terms and conditions.This are the terms and conditions.This are the terms andThis are the terms and conditions.This are the terms and conditions.This are the terms andThis are the terms and conditions.This are the terms and conditions.This are the terms andThis are the terms and conditions.This are the terms and conditions.This are the terms andThis are the terms and conditions.This are the terms and conditions.This are the terms andThis are the terms and conditions.This are the terms and conditions.This are the terms andThis are the terms and conditions.This are the terms and conditions.This are the terms andThis are the terms and conditions.This are the terms and conditions.This are the terms andThis are the terms and conditions.This are the terms and conditions.This are the terms andThis are the terms and conditions.This are the terms and conditions.This are the terms andThis are the terms and conditions.This are theions.This are theions.This are theions.This are theions.This are theions.This are theions.This are theions.This are theions.This are theions.This are theions.This are theions.This are theions.This are theions.This are theions.This are theions.This are theions.This are theions.This are theions.This are theions.This are theions.This are theions.This are theions.This are theions.This are theions.This are theions.This are theions.This are theions.This are theions.This are theions.This are the terms and conditions.This are the terms and conditions.This are the terms and conditions.This are the terms and conditions.This are the terms and conditions.This are the terms and conditions.This are the terms and conditions.This are the terms and conditions.This are the terms and conditions.This are the terms and conditions.This are the terms and conditions.This are the terms and conditions.</string>
    <string name="home">Home</string>
    <string name="addrestaurantobject">Restaurants</string>
    <string name="street_food">Street Food</string>
    <string name="reservation">Reservation</string>
    <string name="reviews">Reviews</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="add_street_food">Add Street Food</string>
    <string name="invisible_button" />
    <string name="user_account_type">User account type</string>
    <string name="back">Back</string>
    <string name="set_button" />
    <string name="restaurants">Restaurants</string>
    <string name="please_visit_our">Please visit our</string>
    <string name="Forum">forum</string>
    <string name="please_visit_our_forum">Please visit our forum</string>
    <string name="app_logo">app logo</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="i_accept_the_terms_of_service_and_privacy_policy">I accept the Terms of Service and Privacy Policy</string>
    <string name="user_name">User Name</string>
    <string name="search_restaurants">Search</string>
    <string name="search_street_food">Search</string>
    <string name="resturant_name">Restaurant name</string>
    <string name="resturant_address">restaurant_address</string>
    <string name="restaurant_name">RESTAURANT NAME</string>
    <string name="adress">Adress</string>
    <string name="description">description</string>
    <string name="add_reviews">Add reviews</string>
    <string name="view_reviews">View reviews</string>
    <string name="this_is_the_menu">This is the menu</string>
    <string name="search_input_text">Search input text</string>
    <string name="location">Location</string>
    <string name="restaurant_type">restaurant type</string>
    <string name="please_enter_the_name_of_the_place">Please enter the name of the place</string>
    <string name="name_of_the_restaurant">Name of the restaurant</string>
    <string name="add">Add</string>
    <string name="i_agree">I agree</string>
    <string name="restaurantphoto">restaurantphoto</string>
    <string name="photo">photo</string>
    <string name="street_food_name">Street Food Name</string>
    <string name="address">Address</string>
    <string name="search">Search</string>
    <string name="floating_button_open_popup_for_entering_topic_text">floating button open popup for entering topic text</string>
    <string name="enter_your_text">Enter your text .....</string>
    <string name="restaurant_photo">Restaurant photo</string>
    <string name="add_review">Add review</string>
    <string name="save">Save</string>
    <string name="add_restaurant">Add Restaurant</string>
    <string name="view_users">View Users</string>
    <string name="user_type">User type</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="food_critic">Food Critic</string>
    <string name="delete_user">Delete user</string>
    <string name="add_topic">Add Topic</string>
    <string name="enter_your_comment">Enter your comment</string>
    <string name="add_comment">Add comment</string>
    <string name="comment">comment</string>


</resources>